--- a/Rashed.html
+++ b/Rashed.html
@@ -9,11 +9,11 @@
 <meta content="google-site-verification=EwiYR1gVFg5WFVE7c9EWbOZQW-W1m_rwpsn6hOocLuQ" name="google-site-verification">
 
 <!-- External CSS -->
-<link href="./ask kalam_files/kalamcx.webflow.shared.ffbe31c97.css" rel="stylesheet" type="text/css">
+<link href="./Ask Kalam_files/kalamcx.webflow.shared.ffbe31c97.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/" rel="preconnect">
 <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin="anonymous">
 
-<script src="./ask kalam_files/webfont.js.download" type="text/javascript"></script>
+<script src="./Ask Kalam_files/webfont.js.download" type="text/javascript"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Great+Vibes:400|Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" media="all">
 
 <script type="text/javascript">
